# mx-paint-the-moon

./: .gitignore  Cargo.toml  check.sh  readme.md  scenario.sh  setup.sh  startms.sh
.github/workflows/: ci.yml
benchmark-gas/: Cargo.toml  gas-report-group-0.csv  gas-report-group-1.csv  gas-report-raw-0.csv  gas-report-raw.csv  paint-owner.pem
benchmark-gas/src/: gas_interact.rs  gas_interact_main.rs  moon_proxy.rs
common/: Cargo.toml
common-non-wasm/: Cargo.toml
common-non-wasm/src/: config.rs  lib.rs  query.rs
common-wasm/: Cargo.toml
common-wasm/src/: config.rs  lib.rs  query.rs
common/src/: codec.rs  config.rs  data.rs  lib.rs
common/src/config/: data.rs  mod.rs  routes.rs  state.toml
common/src/data/: map.rs  mod.rs
common/src/data/requests/: mod.rs  query.rs  setup.rs
common/src/gloo_requests/: mod.rs  request.rs
common/src/proxies/: mod.rs  paint_harvest_proxy.rs  paint_the_moon_proxy.rs
common/src/wasm/: mod.rs  paint-the-moon-sc.wasm
interact/: .gitignore  Cargo.toml  config.toml  storage.sh
interact-gas/: .gitignore  Cargo.toml  gas-report-0.csv  gas-report-group.csv  gas-report-raw.csv  rand-report-group.csv  rand-report-raw.csv  rect-report-raw.csv
interact-gas/src/: basic_interact.rs  basic_interact_cli.rs  basic_interact_state.rs  gas_interact.rs  gas_interact_cli.rs
interact/src/: ptm_interact.rs  ptm_interact_cli.rs  ptm_interact_config.rs  ptm_interact_image.rs  ptm_interact_main.rs  ptm_interact_state.rs
interactor/: Cargo.toml
interactor-no/: Cargo.toml
interactor-no/src/: interactor.rs
interactor/src/: interactor.rs
microservice/: Cargo.toml  readme.md
microservice/src/: main.rs
microservice/src/interactor/: Cargo.toml  interactor.rs  lib.rs  paint_harvest.rs  paint_the_moon.rs
microservice/src/rabbit_mq/: config.rs  data.rs  events.rs  message.rs  mod.rs
microservice/src/rabbit_mq/events/: block_change.rs  events.rs  mod.rs  splash.rs
microservice/src/redis_local/: data.rs  mod.rs
microservice/src/routes/: mod.rs  query.rs  setup.rs
microservice/tests/: interactor_scenarios.rs
moon-color/: Cargo.toml
moon-color/src/: moon_color.rs
moon-render-yew/: Cargo.toml  trunk.toml
moon-render-yew/src/: context.rs  interactor.rs  main.rs  routes.rs
moon-render-yew/src/components/: admin_panel.rs  map.rs  mod.rs
moon-render-yew/src/pages/: dashboard.rs  mod.rs
moon-render-yew/src/requests/: mod.rs  paint_the_moon_proxy.rs  query.rs  request.rs  setup.rs  transaction.rs
paint-harvest-sc/: Cargo.toml  sc-config.toml
paint-harvest-sc/meta/: Cargo.toml
paint-harvest-sc/meta/src/: main.rs
paint-harvest-sc/output/: paint-harvest-sc.abi.json  paint-harvest-sc.mxsc.json
paint-harvest-sc/scenarios/: paint_harvest_sc.scen.json
paint-harvest-sc/src/: custom_callbacks.rs  data.rs  events.rs  owner.rs  paint_harvest_sc.rs  private.rs  storage.rs
paint-harvest-sc/tests/: paint_harvest_sc_scenario_go_test.rs  paint_harvest_sc_scenario_rs_test.rs
paint-harvest-sc/wasm/: Cargo.toml
paint-harvest-sc/wasm/src/: lib.rs
paint-the-moon-sc/: Cargo.toml  sc-config.toml
paint-the-moon-sc/interactor/: Cargo.toml
paint-the-moon-sc/interactor/src/: interactor.rs
paint-the-moon-sc/meta/: Cargo.toml
paint-the-moon-sc/meta/src/: main.rs
paint-the-moon-sc/output/: paint-the-moon-sc.abi.json  paint-the-moon-sc.imports.json  paint-the-moon-sc.mxsc.json  paint-the-moon-sc.wasm
paint-the-moon-sc/scenarios/: paint_the_moon_sc.scen.json
paint-the-moon-sc/src/: color.rs  data.rs  paint_proxy.rs  paint_the_moon_sc.rs  pixel_block.rs
paint-the-moon-sc/tests/: paint_the_moon_blackbox.rs  paint_the_moon_sc_scenario_go_test.rs  paint_the_moon_sc_scenario_rs_test.rs
paint-the-moon-sc/wasm/: Cargo.toml
paint-the-moon-sc/wasm-block-16/: Cargo.toml
paint-the-moon-sc/wasm-block-32/: Cargo.toml
paint-the-moon-sc/wasm-block-32/src/: lib.rs
paint-the-moon-sc/wasm-block-4/: Cargo.toml
paint-the-moon-sc/wasm-block-8/: Cargo.toml
paint-the-moon-sc/wasm-paint-the-moon-16/: Cargo.toml
paint-the-moon-sc/wasm-paint-the-moon-32/: Cargo.toml
paint-the-moon-sc/wasm-paint-the-moon-32/src/: lib.rs
paint-the-moon-sc/wasm-paint-the-moon-4/: Cargo.toml
paint-the-moon-sc/wasm-paint-the-moon-64/: Cargo.toml
paint-the-moon-sc/wasm-paint-the-moon-64/src/: lib.rs
paint-the-moon-sc/wasm-paint-the-moon-8/: Cargo.toml
paint-the-moon-sc/wasm-paint-the-moon-8/src/: lib.rs
paint-the-moon-sc/wasm/src/: lib.rs
sphere/: Cargo.toml
sphere/src/: checker.rs  sphere.rs
static-web-server/: Cargo.toml
static-web-server/src/: main.rs
static-web-server/static/: index.html
tools/img-processing/: .gitignore  Cargo.toml
tools/img-processing/src/: main.rs
tools/moon-plotter/: Cargo.toml
tools/moon-plotter/src/: checker3d.rs  lib.rs  moon3d.rs  plot3d.rs  sphere.rs
tools/moon-plotter/www/: bootstrap.js  index.html  index.js  moon-js.js  package.json  webpack.config.js
tools/sphere/: Cargo.toml
tools/sphere/src/: lib.rs  sphere.rs
