[workspace]
resolver = "2"

members = [
    "common",
    "common-wasm",
    "common-non-wasm",

    "benchmark-gas",
    "interact",

    "paint-harvest-sc",
    "paint-harvest-sc/meta",

    "paint-the-moon-sc",
    "paint-the-moon-sc/meta",

    # "moon-render-yew",
    # "microservice",

    "tools/img-processing",
    # "tools/moon-plotter",
    "tools/sphere", "moon-color",
]
