[package]
name = "ptm-benchmark-gas"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "ptm-benchmark-gas"
path = "src/gas_interact_main.rs"

[lib]
path = "src/gas_interact.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }
rand = "0.8.5"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "d37a5bf2ff061da8cd087ede1bad3f5cf75800a9"

[dependencies.multiversx-sc-snippets]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "d37a5bf2ff061da8cd087ede1bad3f5cf75800a9"

[features]
chain-simulator-tests = []
