[package]
name = "ptm-benchmark-gas"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "ptm-benchmark-gas"
path = "src/gas_interact_main.rs"

[lib]
path = "src/gas_interact.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }
rand = "0.8.5"

[dependencies.multiversx-sc]
version = "0.65.1"

[dependencies.multiversx-sc-snippets]
version = "0.65.1"

[features]
chain-simulator-tests = []
