[package]
name = "common-non-wasm"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.9.0"
redis = { version = "0.27.0", features = ["async-std-comp"] }
serde_json = "1.0.128"
common = { path = "../common" }
toml = { version = "0.8.19" }
multiversx-sc-snippets = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "3a0c91737ef73c133c9aa95b690eba9909cb6063" }
