[package]
name = "common-non-wasm"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
common = { path = "../common" }
redis = { version = "0.27.0", features = ["async-std-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
toml = { version = "0.8.19" }
