[package]
name = "common-wasm"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
multiversx-sc = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "3a0c91737ef73c133c9aa95b690eba9909cb6063" }
multiversx-sc-snippets-dapp = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "3a0c91737ef73c133c9aa95b690eba9909cb6063" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.19" }
