[package]
name = "basic-interact"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "basic-interact"
path = "src/basic_interact_main.rs"

[lib]
path = "src/basic_interact.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }
rand = "0.8.5"

[dependencies.paint-the-moon-sc]
path = "../paint-the-moon-sc"

[dependencies.multiversx-sc-snippets]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "00e087192087ae126a541ebbc6cba53a823bc94f"

[features]
chain-simulator-tests = []
