[package]
name = "ptm-interact"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "ptm-interact"
path = "src/ptm_interact_main.rs"

[lib]
path = "src/ptm_interact.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }
rand = "0.8.5"
image = "0.25.4"
anyhow = "1.0.91"
hex = "0.4.3"

[dependencies.paint-the-moon-sc]
path = "../paint-the-moon-sc"

[dependencies.multiversx-sc-snippets]
git = "https://github.com/multiversx/mx-sdk-rs/"
rev = "d37a5bf2ff061da8cd087ede1bad3f5cf75800a9"

[dependencies.moon-color]
path = "../moon-color"

[dependencies.sphere]
path = "../sphere"

