[package]
name = "ptm-interact"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "ptm-interact"
path = "src/ptm_interact_main.rs"

[lib]
path = "src/ptm_interact.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }
rand = "0.8.5"
image = "0.25.4"
anyhow = "1.0.91"
hex = "0.4.3"

[dependencies.paint-the-moon-sc]
path = "../paint-the-moon-sc"

[dependencies.multiversx-sc-snippets]
version = "0.65.1"

[dependencies.moon-color]
path = "../moon-color"

[dependencies.sphere]
path = "../sphere"

