[package]
name = "interactor-paint-the-moon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interactor-paint-the-moon"
path = "src/interactor.rs"

[dependencies]
multiversx-sc-snippets = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "00e087192087ae126a541ebbc6cba53a823bc94f" }
# common = { path = "../common" }
toml = "0.8.6"


