[package]
name = "interactor-paint-the-moon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interactor-paint-the-moon"
path = "src/interactor.rs"

[dependencies]
multiversx-sc-snippets = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "34dc67cde4ad7b14e602dec6e963d2e1e788443f" }
# common = { path = "../common" }
toml = "0.8.6"


