[package]
name = "interactor-paint-the-moon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interactor-paint-the-moon"
path = "src/interactor.rs"

[dependencies]
multiversx-sc-snippets = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "d37a5bf2ff061da8cd087ede1bad3f5cf75800a9" }
# common = { path = "../common" }
toml = "0.8.6"


