[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-rt = { version = "2.10.0" }
actix-web = "4.9.0"
common = { path = "../common" }
common-non-wasm = { path = "../common-non-wasm" }
futures = { version = "0.3.31" }
interactor = { path = "src/interactor" }
lapin = { version = "2.5.0" }
multiversx-sc-snippets = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "34dc67cde4ad7b14e602dec6e963d2e1e788443f" }
multiversx-sdk = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "34dc67cde4ad7b14e602dec6e963d2e1e788443f" }
redis = { version = "0.27.0", features = ["async-std-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
toml = { version = "0.8.19" }
