[package]
name = "microservice"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-rt = { version = "2.10.0" }
actix-web = "4.9.0"
common = { path = "../common" }
common-non-wasm = { path = "../common-non-wasm" }
futures = { version = "0.3.31" }
interactor = { path = "src/interactor" }
lapin = { version = "2.5.0" }
redis = { version = "0.27.0", features = ["async-std-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
toml = { version = "0.8.19" }

[dependencies.multiversx-sc-snippets]
version = "0.65.1"

[dependencies.multiversx-sdk]
version = "0.65.1"
