[package]
name = "moon-render-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version = "0.7.3", features = ["BootstrapHeartFill"] }
yew-router = { version = "0.17.0" }
web-sys = { version = "0.3.70", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "ImageData",
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
multiversx-sc-snippets-dapp = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "2d18801187a5ea89949647f07553ed80e695dab5" }
common = { path = "../common" }
serde-wasm-bindgen = { version = "0.6.5" }
