[package]
name = "moon-render-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
common-wasm = { path = "../common-wasm" }
console_log = "0.2"
getrandom = { version = "0.2", features = ["js"] }
gloo = { version = "0.11.0" }
gloo-net = { version = "0.6.0", features = ["json"] }
js-sys = "0.3"
log = "0.4"
multiversx-sc-snippets-dapp = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "3a0c91737ef73c133c9aa95b690eba9909cb6063" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
web-sys = { version = "0.3.70", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "ImageData",
] }
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version = "0.7.3", features = ["BootstrapHeartFill"] }
yew-router = { version = "0.17.0" }
