[package]
name = "paint-harvest-sc"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/paint_harvest_sc.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "34dc67cde4ad7b14e602dec6e963d2e1e788443f"

[dependencies.paint-the-moon-sc]
path = "../paint-the-moon-sc"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "34dc67cde4ad7b14e602dec6e963d2e1e788443f"
