[package]
name = "paint-harvest-sc"
version = "0.0.0"
authors = ["you"]
edition = "2024"
publish = false

[lib]
path = "src/paint_harvest_sc.rs"

[dependencies.multiversx-sc]
version = "0.65.1"

[dependencies.paint-the-moon-sc]
path = "../paint-the-moon-sc"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.1"
