[package]
name = "paint-the-moon-sc"
version = "0.0.0"
authors = ["you"]
edition = "2024"
publish = false

[lib]
path = "src/paint_the_moon_sc.rs"

[features]
default = ["block-size-8"]
block-size-4 = []
block-size-8 = []
block-size-16 = []
block-size-32 = []
block-size-64 = []

[dependencies.multiversx-sc]
version = "0.65.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.1"

