[package]
name = "interactor-paint-the-moon"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "interactor-paint-the-moon"
path = "src/interactor.rs"

[dependencies]
multiversx-sc-snippets = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "3a0c91737ef73c133c9aa95b690eba9909cb6063" }
common = { path = "../../common" }
toml = "0.8.6"


