[package]
name = "interactor"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
common = { path = "../../../common" }
common-non-wasm = { path = "../../../common-non-wasm" }
multiversx-sc-snippets = { git = "https://github.com/multiversx/mx-sdk-rs/", rev = "3a0c91737ef73c133c9aa95b690eba9909cb6063" }
